Pass the feed URI to the Feed.get() method, to allow a feed producer to extract business data out of it, and return that URI in the feed itself. Added a feed binding to the Bigbank demo, allowing a client to the customer account report as a feed.
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@548879 13f79535-47bb-0310-9956-ffa450edef68